# TripSphere

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yaml  docker-compose.yaml  skills-lock.json  改造建议.md
artifacts/analysis/: latest
artifacts/analysis/20260507_162701/: comparison_table.csv  degradation_detail.csv  thesis_numbers.md
deploy/docker-compose/: docker-compose.yaml
deployment/kubernetes/: .gitignore  Taskfile.yaml
docs/: aim.md  auth.md  commerce.md  essay_needs.md  experiment-observations.md  fault-injection-quickstart.md  grafana-trace-query-profiles.md  langgraph-fault-injection-report.md  locust-fault-metrics-experiment-plan.md  reference_content.md  test.md  tips.md
docs/design/: commerce-domain-design.md
essay/graduation_thesis/: README.md  main.bib  main.synctex(busy)  main.tex  main.xdv  preamble.tex
infra/initializer/: .gitignore  README.md  Taskfile.yaml  main.py  pyproject.toml
infra/initializer/scripts/: convert_attractions.py  convert_hotels.py  create_attractions.py  create_hotels.py  create_inventories.py  create_pois.py  create_room_types.py  create_spus.py  enrich_pois.py
infra/initializer/src/initializer/: attractions.py  convert.py  hotels.py  inventories.py  mongodb.py  pois.py  room_types.py  spus.py  types.py
infra/initializer/src/initializer/config/: settings.py
infra/mysql/: init.sql
infra/otel-collector/: config.yaml
infra/postgres/: init.sql
mysql/: init.sql
scripts/: fault-demo.sh  generate_thesis_figures.py
scripts/locust/: Taskfile.yml  analyze_matrix.py  fault_scenarios.yaml  formal_test.sh  generate_report.py  locustfile.py  pyproject.toml  run-matrix.sh  smoke_test.sh
trip-attraction-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-chat-service/: .gitignore  Taskfile.yaml  pyproject.toml
trip-chat-service/src/chat/: asgi.py
trip-chat-service/src/chat/agent/: __init__.py  agui.py  facade.py  remote_agent.py
trip-chat-service/src/chat/common/: deprecated.py  exceptions.py
trip-chat-service/src/chat/nacos/: naming.py  utils.py
trip-chat-service/src/chat/observability/: __init__.py  fault.py  tracing.py
trip-chat-service/src/chat/prompts/: agent.py
trip-chat-service/tests/observability/: conftest.py  test_fault.py
trip-file-service/: .gitignore  Taskfile.yaml  buf.gen.yaml
trip-file-service/cmd/: main.go
trip-file-service/config/: init.go
trip-file-service/services/: file.go
trip-hotel-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-inventory-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-itinerary-planner/: .gitignore  Taskfile.yaml  pyproject.toml
trip-itinerary-planner/libs/tripsphere/: .gitignore  pyproject.toml
trip-itinerary-planner/src/itinerary_planner/: asgi.py
trip-itinerary-planner/src/itinerary_planner/agent/: chat_agent.py  nodes.py  state.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/common/: deps.py  fault_deps.py
trip-itinerary-planner/src/itinerary_planner/config/: settings.py
trip-itinerary-planner/src/itinerary_planner/grpc/clients/: itinerary.py
trip-itinerary-planner/src/itinerary_planner/models/: itinerary.py  planning.py
trip-itinerary-planner/src/itinerary_planner/nacos/: naming.py  utils.py
trip-itinerary-planner/src/itinerary_planner/observability/: __init__.py  fault.py  tracing.py
trip-itinerary-planner/src/itinerary_planner/prompts/: chat_agent.py  workflow.py
trip-itinerary-planner/src/itinerary_planner/routers/: planning.py
trip-itinerary-planner/src/itinerary_planner/tools/: __init__.py  attractions.py  geocoding.py  hotel.py  itinerary.py
trip-itinerary-planner/tests/observability/: conftest.py  test_decorators.py  test_fault.py
trip-itinerary-service/: Dockerfile  Taskfile.yaml  pom.xml
trip-journey-assistant/: .gitignore  README.md  Taskfile.yaml  pyproject.toml
trip-journey-assistant/libs/tripsphere/: pyproject.toml
trip-journey-assistant/src/journey_assistant/: agent.py  asgi.py
trip-journey-assistant/src/journey_assistant/config/: settings.py
trip-journey-assistant/src/journey_assistant/nacos/: ai.py  naming.py  utils.py
trip-journey-assistant/src/journey_assistant/tools/: order.py  product.py
trip-next-frontend/: .env  .gitignore  AGENTS.md  Dockerfile  Taskfile.yaml  buf.gen.yaml  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  proxy.ts
trip-next-frontend/actions/: attraction.ts  auth.ts  hotel.ts  itinerary.ts  order.ts  product.ts
trip-next-frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
trip-next-frontend/components/: app-sidebar.tsx  attraction-card-list.tsx  attraction-card.tsx  attraction-search-bar.tsx  copilot-provider.tsx  hotel-card-list.tsx  hotel-card.tsx  hotel-hero-search.tsx  image-placeholder.tsx  itinerary-plan-form.tsx  itinerary-viewer.tsx  map-panel.tsx  signin-form.tsx  signup-form.tsx  site-header.tsx  star-icons.tsx  user-navigation-menu.tsx  user-navigation.tsx
trip-next-frontend/lib/: definitions.ts  env.ts  format.ts  hotel-helpers.ts  order-types.ts  session.ts
trip-note-creator/: pyproject.toml
trip-note-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-order-assistant/: Dockerfile  README.md  Taskfile.yaml  buf.gen.yaml  pyproject.toml
trip-order-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-poi-service/: Dockerfile  Taskfile.yaml  pom.xml
trip-product-service/: Dockerfile  README.md  Taskfile.yaml  pom.xml
trip-review-service/: .env.example  .gitignore  Taskfile.yaml  buf.gen.yaml  go.mod  go.sum
trip-review-service/config/: config.go
trip-review-summary/: Taskfile.yaml  pyproject.toml
trip-user-service/: Dockerfile  Taskfile.yaml  pom.xml
(+812 files in other folders)
